--- a/time.html
+++ b/time.html
@@ -53,7 +53,7 @@
           " ",
           fmt(now.getHours()),
           ":",
-          fmt(now.getHours()),
+          fmt(now.getMinutes()),
           ":",
           fmt(now.getSeconds()),
           ".",
