--- a/time.html
+++ b/time.html
@@ -47,7 +47,7 @@
         const date = [
           now.getFullYear(),
           "-",
-          fmt(now.getMonth()),
+          fmt(now.getMonth() + 1),
           "-",
           fmt(now.getDate()),
           " ",
